--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b main"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main"
   },
   "repository": {
     "type": "git",
