--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
